# squishmark

./: .gitattributes  .gitignore  .hadolint.yaml  CHANGELOG.md  CLAUDE.md  Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  pyproject.toml  release-please-config.json
.claude/: settings.json  settings.local.json
.claude/skills/dev/: SKILL.md
.claude/skills/dev-setup/: SKILL.md
.claude/skills/dev-setup/scripts/: check-env.py
.claude/skills/docker/: SKILL.md
.claude/skills/format/: SKILL.md
.claude/skills/git/: SKILL.md
.claude/skills/git/scripts/: setup-worktree.py
.claude/skills/github/: SKILL.md
.claude/skills/github/references/: graphql.md  labels.md  milestones.md  pull-requests.md
.claude/skills/lint/: SKILL.md
.claude/skills/playwright/: skill.md
.claude/skills/python/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/theme-creator/: SKILL.md
.claude/skills/theme-creator/references/: filters.md  model-fields.md  pygments.md  (+4 more)
.claude/skills/typecheck/: SKILL.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  conventional-commits.yml  publish-image.yml  release-please.yml
scripts/: github-issue-updater.py  run-checks.py  setup-worktree.py  start-dev.py
src/squishmark/: __init__.py  config.py  dependencies.py  main.py
src/squishmark/models/: __init__.py  content.py  db.py
src/squishmark/routers/: __init__.py  admin.py  archive.py  assets.py  auth.py  feed.py  home.py  pages.py  posts.py  search.py  seo.py  tags.py  webhooks.py
src/squishmark/services/: __init__.py  analytics.py  analytics_middleware.py  cache.py  container.py  content.py  csrf.py  github.py  livereload.js  livereload.py  markdown.py  notes.py  search.py  theme.py  url_rewriter.py
src/squishmark/templates/: dev_auth_banner.css  dev_auth_banner.html
tests/: __init__.py  conftest.py  test_accent_filters.py  test_admin_notes.py  test_analytics_filtering.py  test_api_explorer_routes.py  test_archive.py  test_cache.py  test_canonical.py  test_config.py  test_content.py  test_content_ref_pinning.py  test_csrf.py  test_csrf_integration.py  test_dependencies.py  test_feed.py  test_livereload.py  test_markdown.py  test_models.py  test_nav_pages.py  test_nested_pages.py  test_notes_rendering.py  test_page_toc.py  test_posts.py  test_pygments_css.py  test_related.py  test_routes_admin.py  test_routes_archive.py  test_routes_assets.py  test_routes_auth.py  test_routes_home.py  test_routes_pages.py  test_routes_posts.py  test_routes_public.py  test_routes_search.py  test_routes_tags.py  test_routes_webhooks.py  test_search.py  test_seo.py  test_series.py  (+7 more)
themes/blue-tech/: 404.html  base.html  home.html  index.html  page.html  post.html
themes/blue-tech/admin/: admin.html
themes/blue-tech/static/: admin.css  pygments.css  style.css
themes/default/: 404.html  _related.html  _search.html  _share.html  archive.html  base.html  index.html  page.html  post.html  tag.html  tags.html
themes/default/admin/: _note_edit_form.html  _note_item.html  admin.html
themes/default/static/: admin.css  pygments.css  search.js  style.css
themes/terminal/: 404.html  README.md  base.html  home.html  index.html  page.html  post.html
themes/terminal-modern/: 404.html  base.html  index.html  page.html  post.html
themes/terminal-modern/admin/: admin.html
themes/terminal-modern/static/: admin.css  pygments.css  style.css
themes/terminal/admin/: admin.html
themes/terminal/static/: admin.css  backgrounds.js  pixel-font.js  pygments.css  style.css
(+10 files in other folders)
