[project]
name = "squishmark"
version = "0.1.0"
description = "A lightweight, GitHub-powered blogging engine with Jinja2 theming"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "x3ek" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "markdown>=3.7",
    "pygments>=2.19.1",
    "pyyaml>=6.0.2",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "authlib>=1.4.0",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
# Test dependencies - needed in Docker for running tests
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx",
]

# Lint/type-check tools - run locally or in CI, NOT in Docker
lint = [
    "ruff>=0.14.0,<0.15",
    "pyright>=1.1.400",
]

# Full dev = test + lint + livereload (for local development)
dev = [
    "squishmark[test]",
    "squishmark[lint]",
    "watchfiles>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/squishmark"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["tests", "themes"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
